doc/generic/pgf/style.css
/*** uncss> filename: processed/style.css ***/
/*
  CSS stylesheet for the LaTeX Lwarp package
  Copyright 2016-2021 Brian Dunn — BD Tech Concepts LLC
*/

@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');

* {
  --main-font: -system-ui, -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', "Source Sans Pro", sans-serif;
  --monospace-font: 'SF Mono', SFMono-Regular, ui-monospace, 'DejaVu Sans Mono', Menlo, Consolas, "Source Code Pro", monospace;
}

header,
section,
footer,
nav,
main,
figure {
  display: block;
}

A:link {
  color: #000080;
  text-decoration: none;
}
A:visited {
  color: #800000;
}
A:hover {
  color: #000080;
  text-decoration: underline;
}
A:active {
  color: #800000;
}
a.tocpart {
  display: inline-block;
  margin-left: 0em;
  font-weight: bold;
}
a.tocsection {
  display: inline-block;
  margin-left: 1em;
  text-indent: -0.5em;
  font-weight: bold;
}
a.tocsubsection {
  display: inline-block;
  margin-left: 2em;
  text-indent: -0.5em;
}
a.tocsubsubsection {
  display: inline-block;
  margin-left: 3em;
  text-indent: -0.5em;
}

body {
  font-family: var(--main-font);
  background: #faf7f4;
  color: black;
  margin: 0em;
  padding: 0em;
  font-size: 100%;
}

p {
  margin: 1.5ex 0em 1.5ex 0em;
}
table p {
  margin: 0.5ex 0em 0.5ex 0em;
}

/* Holds a section number */
span.sectionnumber {
  margin-right: 0em;
}

/* Inserted in front of index lines */

div.hidden,
span.hidden {
  display: none;
}

kbd,
span.texttt,
p span.texttt {
  font-family: var(--monospace-font);
  font-size: 88%;
  line-height: 0.8;
  word-break: break-word;
}

pre {
  padding: 3pt;
}

span.textmd {
  font-weight: normal;
}

span.textsc {
  font-variant: small-caps;
  font-variant-numeric: oldstyle-nums;
}

blockquote {
  display: block;
  margin-left: 2em;
  margin-right: 2em;
}

body div {
  margin: 0ex;
}

h1,
h2,
h4,
h5,
h6,
span.paragraph {
  font-family: var(--main-font);
  font-style: normal;
  font-weight: bold;
  text-align: left;
}

h1 {
  /* title of the entire website, used on each page */
  text-align: center;
  font-size: 2.5em;
  padding: 0.4ex 0em 0ex 0em;
}

h2 {
  font-size: 2em;
}
h4 {
  font-size: 1.75em;
}
h5 {
  font-size: 1.5em;
}
h6 {
  font-size: 1.25em;
}
span.paragraph {
  font-size: 1em;
  font-variant: normal;
  margin-right: 1em;
}

h1 {
  margin: 0ex 0em 0ex 0em;
  line-height: 1.3;
  text-align: center;
}

h2 {
  margin: 1ex 0em 1ex 0em;
  line-height: 1.3;
  text-align: center;
}

h4 {
  margin: 3ex 0em 1ex 0em;
  line-height: 1.3;
}

h5 {
  margin: 3ex 0em 1ex 0em;
  line-height: 1.3;
}

h6 {
  margin: 2ex 0em 1ex 0em;
  line-height: 1.3;
}

.footnotes {
  text-align: left;
  font-size: 0.85em;
  margin: 3ex 2em 0ex 2em;
  border-top: 1px solid silver;
}

section.textbody div.footnotes {
  margin: 3ex 2em 0.5ex 2em;
  border-bottom: 2px solid silver;
}

/* Remove footnote top border in the title page. */

ul {
  margin: 1ex 1em 1ex 0em;
  line-height: 1.2;
}

li {
  margin: 0ex 0em 1ex 0em;
}

html {
  margin: 0;
  padding: 0;
}

.programlisting {
  font-family: var(--main-font);
  margin: 1ex 0ex 1ex 0ex;
  padding: 0.5ex 0pt 0.5ex 0pt;
  overflow-x: auto;
  white-space: pre-wrap;
  font-size: 80%;
}

section.textbody > pre.programlisting {
  border-top: 1px solid silver;
  border-bottom: 1px solid silver;
}

.verbatim {
  overflow-x: auto;
}

/* Minipage environments, vertically aligned to top, center, bottom: */
.minipage {
  /* display: inline-block ; */
  /* Mini pages which follow each other will be tiled. */
  text-align: left;
  margin: 0.25em 0.25em 0.25em 0.25em;
  padding: 0.25em 0.25em 0.25em 0.25em;
  display: inline-flex;
  flex-direction: column;
  overflow: auto;
}

/* Paragraphs in the flexbox did not collapse their margins. */
/* Have not yet researched this. */
.minipage p {
  margin: 0.75ex 0em 0.75ex 0em;
}

dl {
  margin: 1ex 2em 1ex 0em;
  line-height: 1.3;
}

dl dt {
  display: block;
  float: left;
  font-weight: bold;
  padding-right: 1em;
}

dl dd {
  display: block;
}

dl dd:after {
  content: "";
  display: block;
  clear: both;
}

dl dd p {
  margin-top: 0em;
}

dd ul {
  clear: both;
}

nav {
  font-family: var(--main-font);
  margin-bottom: 4ex;
}

nav p {
  line-height: 1.2;
  margin-top: 0.5ex;
  margin-bottom: 0.5ex;
  font-size: 0.9em;
}

img {
  max-width: 600px;
  border: 1px solid silver;
  box-shadow: 3px 3px 3px #808080;
  padding: 0.5%;
  margin: 0.5%;
  background: none;
}

img.inlineimage {
  padding: 0px;
  box-shadow: none;
  border: none;
  background: none;
  margin: 0px;
  display: inline-block;
  border-radius: 0px;
}

figure {
  margin: 5ex auto 5ex auto;
  padding: 1ex 1em 1ex 1em;
  overflow-x: auto;
}

figure div.minipage p {
  font-size: 85%;
}

div.minipage figure {
  border: none;
  box-shadow: none;
}

table {
  margin: 1ex auto 1ex auto;
  border-collapse: separate;
  border-spacing: 0px;
  line-height: 1.3;
}

table > tbody > tr.hline > td {
  border-top: 1px solid #808080;
  margin-top: 0ex;
  margin-bottom: 0ex;
} /* for \hline */ /* for \toprule, \bottomrule */

td {
  padding: 0.5ex 0.5em 0.5ex 0.5em;
}

table td.tdl {
  text-align: left;
  vertical-align: middle;
}
table td.tdc {
  text-align: center;
  vertical-align: middle;
}
table td.tdr {
  text-align: right;
  vertical-align: middle;
}
table td.tdp {
  text-align: left;
  vertical-align: bottom;
}

/* Margins of paragraphs inside table cells: */
td.tdp p {
  padding-top: 1ex;
  padding-bottom: 1ex;
  margin: 0ex;
}

td.tdp {
  padding: 0ex 0.5em 0ex 0.5em;
}

div.center {
  text-align: center;
}

header {
  line-height: 1.2;
  font-size: 1em;
  border-bottom: 1px solid silver;
  margin: 0px;
  padding: 2ex 1em 2ex 1em;
  text-align: left;
}

footer {
  font-size: 0.85em;
  line-height: 1.2;
  margin-top: 1ex;
  border-top: 1px solid silver;
  padding: 2ex 1em 2ex 1em;
  clear: both;
  text-align: left;
}
/* ... */

